worked on section 2

--- a/mpc19/paper.bib
+++ b/mpc19/paper.bib
@@ -424,3 +424,17 @@ year={2019}
   year      = {2014},
   doi       = {10.4204/EPTCS.153.4}
 }
+
+@InProceedings{Laplaza,
+author="Laplaza, Miguel L.",
+editor="Kelly, G. M.
+and Laplaza, M.
+and Lewis, G.
+and Mac Lane, Saunders",
+title="Coherence for distributivity",
+booktitle="Coherence in Categories",
+year="1972",
+publisher="Springer Berlin Heidelberg",
+pages="29--65",
+isbn="978-3-540-37958-4"
+}
