--- a/mpc19/paper.tex
+++ b/mpc19/paper.tex
@@ -976,6 +976,11 @@ $\Orb f {(\inl\,a)} {(\inl\,b)}$. There are two possibilities.
 
 \section{Soundness}\label{sec:interpretation}
 
+In this section, we provide some details on the interpretation of the
+syntax of \Pio, presented in Section \ref{sec:syntax}, into the
+category $\Inv\Dapprox$. Types of \Pio\ are modelled as objects of
+$\Inv\Dapprox$, which are types of the metatheory. In
+
 \section{Conclusions}
 
 
