fixed weak bisim

--- a/mpc19/paper.bib
+++ b/mpc19/paper.bib
@@ -438,3 +438,14 @@ publisher="Springer Berlin Heidelberg",
 pages="29--65",
 isbn="978-3-540-37958-4"
 }
+
+@article{Danielsson18,
+  author    = {Nils Anders Danielsson},
+  title     = {Up-to techniques using sized types},
+  journal   = {{PACMPL}},
+  volume    = {2},
+  number    = {{POPL}},
+  pages     = {43:1--43:28},
+  year      = {2018},
+  doi       = {10.1145/3158131}
+}
