conclusion on other monads of partiality

--- a/mpc19/paper.bib
+++ b/mpc19/paper.bib
@@ -223,16 +223,6 @@ year = {2003}
   doi       = {10.23638/LMCS-14(3:10)2018}
 }
 
-@article{KaarsgaardAG17,
-author = {Kaarsgaard, Robin and Axelsen, Holger Bock and Glück, Robert},
-title = {Join inverse categories and reversible recursion},
-journal = {Journal of Logical and Algebraic Methods in Programming},
-volume = {87},
-number = {},
-pages = {33--50},
-year = {2017},
-}
-
 @article{KaarsgaardG18,
 author={Kaarsgaard, R. and Gl\"{u}ck, R.},
 title={A categorical foundation for structured reversible flowchart languages: {S}oundness and adequacy},
@@ -329,16 +319,6 @@ title = {Theseus: {A} High Level Language for Reversible Computing},
 note = {Work-in-progress report at RC 2014, available at \url{https://www.cs.indiana.edu/~sabry/papers/theseus.pdf}.},
 year = {2014}
 }
-
-@inproceedings{JamesS12,
- author = {James, Roshan P. and Sabry, Amr},
- title = {Information Effects},
- booktitle = {Proceedings of the 39th Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages},
- series = {POPL '12},
- year = {2012},
- pages = {73--84},
- publisher = {ACM}
-} 
 
 @book{DeVos10,
 author = {de Vos, Alexis},
@@ -449,3 +429,52 @@ isbn="978-3-540-37958-4"
   year      = {2018},
   doi       = {10.1145/3158131}
 }
+
+@article{EsikG16,
+  author    = {Zolt{\'{a}}n {\'{E}}sik and
+               Sergey Goncharov},
+  title     = {Some Remarks on Conway and Iteration Theories},
+  journal   = {CoRR},
+  volume    = {abs/1603.00838},
+  year      = {2016},
+  url       = {http://arxiv.org/abs/1603.00838},
+  archivePrefix = {arXiv},
+  eprint    = {1603.00838}
+}
+
+@inproceedings{AltenkirchDK17,
+  author    = {Thorsten Altenkirch and
+               Nils Anders Danielsson and
+               Nicolai Kraus},
+  title     = {Partiality, Revisited - The Partiality Monad as a Quotient Inductive-Inductive
+               Type},
+  booktitle = {Foundations of Software Science and Computation Structures - 20th
+               International Conference, {FOSSACS} 2017, Held as Part of the European
+               Joint Conferences on Theory and Practice of Software, {ETAPS} 2017,
+               Uppsala, Sweden, April 22-29, 2017, Proceedings},
+  pages     = {534--549},
+  year      = {2017},
+  doi       = {10.1007/978-3-662-54458-7\_31}
+}
+
+@inproceedings{UustaluV17-2,
+  author    = {Tarmo Uustalu and
+               Niccol{\`{o}} Veltri},
+  title     = {Partiality and Container Monads},
+  booktitle = {Programming Languages and Systems - 15th Asian Symposium, {APLAS}
+               2017, Suzhou, China, November 27-29, 2017, Proceedings},
+  pages     = {406--425},
+  year      = {2017},
+  doi       = {10.1007/978-3-319-71237-6\_20}
+}
+
+@inproceedings{EscardoK17,
+  author    = {Mart{\'{\i}}n H{\"{o}}tzel Escard{\'{o}} and
+               Cory M. Knapp},
+  title     = {Partial Elements and Recursion via Dominances in Univalent Type Theory},
+  booktitle = {26th {EACSL} Annual Conference on Computer Science Logic, {CSL} 2017,
+               August 20-24, 2017, Stockholm, Sweden},
+  pages     = {21:1--21:16},
+  year      = {2017},
+  doi       = {10.4230/LIPIcs.CSL.2017.21}
+  }
