--- a/mpc19/paper.tex
+++ b/mpc19/paper.tex
@@ -81,7 +81,7 @@
 \newcommand{\piso}{\mathsf{isPartialIso}}
 \newcommand{\pisoalt}{\mathsf{isPartialIso}_2}
 \newcommand{\iterD}{\mathsf{iter}_\D}
-\newcommand{\unfolding}{\mathsf{unfolding}}
+\newcommand{\unfolding}{\mathsf{fixpoint}_\D}
 \newcommand{\refl}{\mathsf{refl}}
 \newcommand{\traceD}{\mathsf{trace}_\D}
 \newcommand{\traceHD}{\mathsf{traceH}_\D}
@@ -560,8 +560,9 @@ $\later$. Alternatively, we can say that two computations $x$ and $y$
 are weakly bisimilar if, whenever $x$ terminates returning a value
 $a$, then $y$ also terminates returning $a$, and vice versa. This
 informal statement can be formalized in several different but
-logically equivalent ways \cite{ChapmanUV19}. Here we consider a
-coinductive formulation employed e.g. in \cite{Danielsson18}.
+logically equivalent ways \cite{ChapmanUV19,VeltriPhD}. Here we
+consider a coinductive formulation employed e.g. in
+\cite{Danielsson18}.
 %% A possible defintion is as follows:
 %% \begin{equation}\label{eq:weak1}
 %% x \approx y = (a : A) \to x \dn a \leftrightarrow y \dn a
@@ -623,7 +624,7 @@ to quotienting is employed, the latter constructions go through
 without the need for additional assumptions. In order to keep an
 agnostic perspective on quotient types and avoid the need for
 disputable semi-classical choice principles, we decided to quotient
-the homsets of $\D$ by (poitwise) weak bisimilarity instead of the
+the homsets of $\D$ by (pointwise) weak bisimilarity instead of the
 delay datatype.
 
 \subsection{Finite Products and Coproducts}
@@ -652,7 +653,7 @@ $\Dapprox$. In fact, $0$ is (also) the terminal object, with $\lambda \_.\,
 \never : A \to \Delay 0$ as the terminal morphism. The
 binary product of $A$ and $B$ in $\Dapprox$ is given by
 $A + B + A \times B$. Nevertheless, it is possible to prove that 1 and
-$- \times -$ are partial terminal object and partial binary products
+$\times$ are partial terminal object and partial binary products
 respectively, in the sense of Cockett and Lack's restriction
 categories \cite{CockettL02,CockettL07}. Here we refrain from making the latter
 statement formal. We only show the construction of the partial pairing
@@ -742,12 +743,28 @@ exists an operation
 \[
 \iter_\T : (A \to \T \,(B + A)) \to A \to \T\,B
 \]
-satisfying a number of axioms, most notably the unfolding axiom:
-\[
+satisfying a number of axioms:
+\[\arraycolsep=8pt\def\arraystretch{1.8}
+\begin{array}{c}
+\mathsf{fixpoint} :
 \iter_\T\,f \equiv \copair {\eta_\T}{\iter_\T \,f} \diamond_\T f
+\\
+\mathsf{naturality} : g \diamond_\T \iter_\T\,f \equiv
+  \iter_\T\,(\copair{\T \inl \comp g} {\eta \comp \inr} \diamond_\T f)
+\\
+\mathsf{codiagonal} :
+\iter_\T \,(\iter_\T\,g) \equiv \iter_\T\,(\T \copair {\id} {\inr}
+  \comp g)
+\\[.25cm]
+\infer{\mathsf{uniformity}\,p : \iter_\T \,f \comp h \equiv \iter_\T
+  \,g}{p : f \comp h \equiv \T (\id + h) \comp g}
+\end{array}
 \]
 where $\eta_\T$ is the unit of $\T$ and $\diamond_\T$ denotes morphism
 composition in the Kleisli category of $\T$.
+The standard definition of uniform iteration operator includes the
+dinaturality axiom, which has recently been discovered to be derivable
+from the other laws \cite{EsikG16,GoncharovMR16}.
 
 The delay monad is an Elgot monad for which the axioms holds up to
 weak bisimilarity, not propositional equality. Its iteration operator
@@ -795,7 +812,7 @@ The operation $\iterD$ is compatible with weak bisimilarity, which means
 that $\iterD\,f_1 \approx \iterD\,f_2$ whenever $f_1 \approx f_2$.
 
 As mentioned above, $\iterD$ satisfies the Elgot iteration axioms only
-up to weak bisimilarity. Here we show the proof of the unfolding
+up to weak bisimilarity. Here we show the proof of the fixpoint
 axiom. The proof relies on an auxiliary proof $\unfolding'$. 
 \[
 \def\arraystretch{1.2}
@@ -1039,6 +1056,30 @@ complete definition of the interpretation of term equivalences.
 
 
 \section{Conclusions}
+
+It is natural to wonder if our work can be ported to other monads of
+partiality in Martin-L\"of type theory. As already discussed in the
+end of Section \ref{sec:trace}, the maybe monad is not suitable for
+modelling a well-behaved trace combinator without the assumption of
+classical principles such as \textsf{LPO}. The partial map classifier
+\cite{UustaluV17-2,EscardoK17}
+$\mathsf{PMC}\,A = (P : \mathsf{Prop}) \to P \to A$, where
+$\mathsf{Prop}$ is the type of propositions (types with at most one
+inhabitant), supports the existence of a uniform iteration operator
+and therefore a trace. Nevertheless, the specification of iteration is
+more complicated then the one presented in Section \ref{sec:elgot} for
+the delay monad, which is a simple corecursive definition. The Elgot
+monad structure of $\mathsf{PMC}$ follows from its Kleisli category
+being a join restriction category, so iteration is defined in terms of
+least upper bounds of certain chains of morphisms. The subcategory of
+partial isomorphisms of the Kleisli category of $\mathsf{PMC}$
+supports a dagger trace combinator, which can be proved following
+Kaarsgaard et al.'s general strategy \cite{KaarsgaardAG17}.  The exact
+same observations apply to the partiality monad in homotopy type
+theory \cite{AltenkirchDK17,ChapmanUV19}, to which the quotiented
+delay monad $\mathsf{Delay}_{\approx}\,A = \Delay A/{\approx}$ is
+isomorphic to under the assumption of countable choice.
+
 
 
 %
